PATCH and DELETE for Ticket Endpoint Documented
